# voice-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.yml  streamlit_app_prerecorded.py  streamlit_app_streaming.py  streamlit_ex.py
app/agent/: agent_tools.py  chatbot.py  prompts.py
app/components/: chat_display.py  controls.py  custom_css.py  sidebar.py
app/core/: config.py  database.py
app/services/: stt.py  tts.py
app/services/whisper_streaming_repo/: whisper_online.py
app/utils/: audio_control.py  create_db.py  logger.py
